[feat]:add more example

--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
-form abbr{
+section:nth-child(2) abbr{
+  color:red;
+  font-variant:small-caps;
+}
+
+section:nth-child(3) form abbr{
   text-decoration: none;
   color:red;
 }
